# embed-zig

./: .bazelignore  .bazelrc  .cursorignore  .gitignore  01-plan.md  AGENTS.md  BUILD.bazel  COMPLETION_SUMMARY.md  LICENSE  MODULE.bazel  README.md  README.zh-CN.md  bootstrap.sh  extensions.bzl
bazel/: BUILD.bazel  data.bzl  env.bzl
bazel/bk/: BUILD.bazel  defs.bzl
bazel/bk/kconfig/: BUILD.bazel  README.md  app.bzl  audio.bzl  bt.bzl  crypto.bzl  debug.bzl  defs.bzl  freertos.bzl  lwip.bzl  psram.bzl  pwm.bzl  saradc.bzl  timer.bzl  uart.bzl
bazel/bk/partition/: entry.bzl  presets.bzl  table.bzl
bazel/bk/scripts/: build.sh  common.sh
bazel/bk/tools/: BUILD.bazel
bazel/esp/: BUILD.bazel  defs.bzl  settings.bzl  transitions.bzl
bazel/esp/partition/: BUILD.bazel  entry.bzl  littlefs.bzl  nvs.bzl  spiffs.bzl  table.bzl
bazel/esp/scripts/: build.sh  common.sh  flash.sh  monitor.sh
bazel/esp/sdkconfig/: BUILD.bazel  app.bzl  bt.bzl  core.bzl  crypto.bzl  freertos.bzl  littlefs.bzl  log.bzl  lwip.bzl  newlib.bzl  psram.bzl  spiffs.bzl  sr.bzl  validate.bzl  wifi.bzl
bazel/esp/tools/: BUILD.bazel
bazel/macos/: BUILD.bazel  defs.bzl
bazel/raysim/: BUILD.bazel  defs.bzl
bazel/tests/external_esp/: .bazelrc  BUILD.bazel  MODULE.bazel  app.zig  platform.zig
bazel/tests/external_help/: BUILD.bazel  MODULE.bazel
bazel/tests/external_opus/: BUILD.bazel
bazel/websim/: defs.bzl
bazel/zig/: BUILD.bazel  cache_merge.zig  defs.bzl
e2e/: BUILD.bazel  README.md
e2e/bazel/: BUILD.bazel  README.md
e2e/bazel/external_esp/: BUILD.bazel  MODULE.bazel  app.zig
e2e/bazel/external_opus/: main.zig
e2e/benchmark/ble_throughput/: BUILD.bazel  platform.zig
e2e/benchmark/ble_x_proto/: BUILD.bazel  platform.zig
e2e/benchmark/http_speed/: BUILD.bazel
e2e/benchmark/https_speed/: BUILD.bazel  app.zig
e2e/benchmark/tcp_speed/: BUILD.bazel
e2e/benchmark/tls_speed/: BUILD.bazel  app.zig
e2e/benchmark/ui_render/: BUILD.bazel  bench_test.zig  state.zig
e2e/ci/: BUILD.bazel
e2e/hal/rtc/: platform.zig
e2e/results/: matrix.md
e2e/selector/: BUILD.bazel  app.zig  main.zig  platform.zig
e2e/selector/bk/: BUILD.bazel  board.zig
e2e/selector/esp/: BUILD.bazel  board.zig
e2e/selector/std/: board.zig
e2e/selector_test/: BUILD.bazel  BUILD_latency.bazel  BUILD_minimal.bazel  benchmark.zig  latency.zig  main.zig  minimal.zig  selector_helper.zig
e2e/tier0_hello_world/: BUILD.bazel  app.zig  platform.zig
e2e/tier0_hello_world/bk/: BUILD.bazel  board.zig
e2e/tier0_hello_world/esp/: BUILD.bazel  board.zig
e2e/tier0_hello_world/std/: BUILD.bazel  board.zig
e2e/tier0_memory/: BUILD.bazel  platform.zig
e2e/tier0_memory/esp/: BUILD.bazel
e2e/tier0_sync/: BUILD.bazel
e2e/tier0_sync/esp/: BUILD.bazel  esp32s3_devkit.zig
e2e/tier0_timer/: BUILD.bazel
e2e/tier0_timer/esp/: BUILD.bazel
e2e/tier0_timer/native/: BUILD.bazel  build.zig  main.zig
e2e/tier1_http_server/: BUILD.bazel  app.zig  platform.zig
e2e/tier1_http_server/esp/: BUILD.bazel  esp32s3_devkit.zig
e2e/tier1_net_event/: BUILD.bazel
e2e/tier1_net_event/bk/: BUILD.bazel
e2e/tier1_net_event/esp/: BUILD.bazel
e2e/tier1_tls_concurrent/: BUILD.bazel  app.zig  platform.zig
e2e/tier1_tls_concurrent/esp/: BUILD.bazel  esp32s3_devkit.zig
e2e/tier1_websocket/: BUILD.bazel  app.zig  platform.zig
e2e/tier1_websocket/esp/: BUILD.bazel  esp32s3_devkit.zig
e2e/tier1_wifi_scan/: BUILD.bazel  app.zig  buffer_boundary.zig  common.zig  empty_scan.zig  event_order.zig  multi_cycle.zig  normal_scan.zig  platform.zig
e2e/tier1_wifi_scan/bk/: BUILD.bazel
e2e/tier1_wifi_scan/esp/: BUILD.bazel  (+1 more)
e2e/tier2_audio_engine/: BUILD.bazel  aec_test.zig  loop_back_test.zig  mic_test.zig  platform.zig  speaker_direct_test.zig  speaker_test.zig
e2e/tier2_opus_aec/: BUILD.bazel  platform.zig
e2e/tier3_ble/: BUILD.bazel  app.zig
e2e/tier3_hci/: BUILD.bazel  app.zig
examples/: AGENTS.md  BUILD.bazel  README.md  README.zh-CN.md
examples/apps/: BUILD.bazel
examples/bk/: BUILD.bazel
examples/ci/: BUILD.bazel
examples/cmake/: zig_install.cmake
examples/esp/: BUILD.bazel  README.md  README.zh-CN.md
examples/gpio_button/: README.zh-CN.md
examples/h106/: app.zig  theme.zig  wasm_main.zig
examples/http_speed_test/: README.md  README.zh-CN.md  server.py
examples/led_strip_flash/: CMakeLists.txt  README.md  README.zh-CN.md
examples/memory_attr_test/: README.md  README.zh-CN.md
examples/nvs_storage/: README.zh-CN.md
examples/pwm_fade/: README.md  README.zh-CN.md
examples/raysim/: BUILD.bazel
examples/temperature_sensor/: README.md  README.zh-CN.md
examples/wifi_dns_lookup/: README.md  README.zh-CN.md
lib/: BUILD.bazel  build.zig  build.zig.zon  docs.zig
lib/audio/: BUILD.bazel  build.zig.zon
lib/crypto/: BUILD.bazel  build.zig  build.zig.zon
lib/dns/: BUILD.bazel  build.zig  build.zig.zon  test_dns.zig
lib/drivers/: BUILD.bazel  build.zig  build.zig.zon
lib/esp/: BUILD.bazel  build.zig  build.zig.zon
lib/hal/: BUILD.bazel  build.zig  build.zig.zon
lib/http/: BUILD.bazel  build.zig  build.zig.zon  test_http.zig  test_https.zig
lib/input/: BUILD.bazel  build.zig
lib/macos/: BUILD.bazel  build.zig  build.zig.zon
lib/math/: BUILD.bazel  build.zig.zon
lib/motion/: BUILD.bazel  build.zig  build.zig.zon
lib/nfc/: build.zig  build.zig.zon
lib/ntp/: BUILD.bazel  build.zig.zon  test_ntp.zig
lib/portaudio/: BUILD.bazel  build.zig  build.zig.zon
lib/raysim/: BUILD.bazel  build.zig
lib/sal/: BUILD.bazel  build.zig  build.zig.zon
lib/src/: heap.zig  http.zig  idf.zig  log.zig  net.zig  rtos.zig  sys.zig  wifi.zig
lib/std/: BUILD.bazel  build.zig  build.zig.zon
lib/tls/: BUILD.bazel  build.zig.zon
lib/trait/: BUILD.bazel  build.zig  build.zig.zon
tools/ble_e2e_runner/: BUILD.bazel  go.mod  main.go
tools/flash/: BUILD.bazel  main.zig
tools/help/: BUILD.bazel  defs.bzl  go.mod  main.go
tools/websim/: BUILD.bazel  Info.plist  board_template.html  flash_server.zig  http_server.zig  main.zig  media_permission.m  renderer.js  waiting.html
(+1867 files in other folders)
