# embed-zig root BUILD file

package(default_visibility = ["//visibility:public"])

# =============================================================================
# All libraries - used by esp_zig_app for file copying
# Each library also has zig_lib() rule for dependency resolution (//lib/xxx:xxx)
# =============================================================================

filegroup(
    name = "all_libs",
    srcs = ["//lib:all_sources"],
)
