# embed-zig root BUILD file

package(default_visibility = ["//visibility:public"])

# =============================================================================
# All libraries - used by esp_zig_app for file copying
# Each library has zig_package() macro for Bazel-native compilation (//lib/xxx:xxx)
# =============================================================================

filegroup(
    name = "all_libs",
    srcs = ["//lib:all_sources"],
)
