"""embed-zig: Zig for embedded systems with ESP32 support."""

module(
    name = "embed_zig",
    version = "0.1.0",
)

# =============================================================================
# Core dependencies
# =============================================================================

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "platforms", version = "1.0.0")

# =============================================================================
# Audio libraries extension (opus, ogg, etc.)
# =============================================================================

audio_libs = use_extension("//:extensions.bzl", "audio_libs")
use_repo(audio_libs, "opus", "ogg")

# =============================================================================
# Zig toolchain extension (with Xtensa support)
# =============================================================================

zig_toolchain = use_extension("//:extensions.bzl", "zig_toolchain")
use_repo(zig_toolchain, "zig_toolchain")
