"""embed-zig: Zig for embedded systems with ESP32 support."""

module(
    name = "embed_zig",
    version = "0.1.0",
)

# =============================================================================
# Core dependencies
# =============================================================================

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.59.0")

# Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.5")

# =============================================================================
# Audio libraries extension (opus, ogg, etc.)
# =============================================================================

audio_libs = use_extension("//:extensions.bzl", "audio_libs")
use_repo(audio_libs, "opus", "ogg")

# =============================================================================
# LVGL UI library
# =============================================================================

lvgl_libs = use_extension("//:extensions.bzl", "lvgl_libs")
use_repo(lvgl_libs, "lvgl")

# =============================================================================
# FFmpeg WASM (for WebSim screen recording)
# =============================================================================

ffmpeg_wasm = use_extension("//:extensions.bzl", "ffmpeg_wasm")
use_repo(ffmpeg_wasm, "ffmpeg_wasm")

html2canvas = use_extension("//:extensions.bzl", "html2canvas")
use_repo(html2canvas, "html2canvas")

# =============================================================================
# KCP library (Fast ARQ Protocol, used by zgrnet)
# =============================================================================

kcp_lib = use_extension("//:extensions.bzl", "kcp_lib")
use_repo(kcp_lib, "kcp")

# =============================================================================
# WebSim dependencies (webview, minih264, minimp4)
# =============================================================================

websim_libs = use_extension("//:extensions.bzl", "websim_libs")
use_repo(websim_libs, "webview", "minih264", "minimp4")

# =============================================================================
# Zig toolchain extension (with Xtensa support)
# =============================================================================

zig_toolchain = use_extension("//:extensions.bzl", "zig_toolchain")
use_repo(zig_toolchain, "zig_toolchain")

# =============================================================================
# ESP sysroot (auto-detect newlib headers for xtensa cross-compilation)
# =============================================================================

esp_sysroot = use_extension("//:extensions.bzl", "esp_sysroot")
use_repo(esp_sysroot, "esp_sysroot")
