# e2e — End-to-end tests, platform conformance, and benchmarks
#
# Structure:
#   trait/*      — Platform conformance tests (per-trait verification)
#   tier0_*      — Tier 0: async primitives, memory, timers
#   tier1_*      — Tier 1: network, TLS, WiFi
#   tier2_*      — Tier 2: audio/codec pipelines
#   tier3_*      — Tier 3: BLE, HCI
#   benchmark/*  — Performance benchmarks
#   ci/          — Aggregate CI targets
#
# Usage:
#   bazel test //e2e/...                          # all std tests (CI)
#   bazel test //e2e/trait/time/std:test           # single trait test
#   bazel build //e2e/ci:build_all_esp             # all ESP cross-compile

package(default_visibility = ["//visibility:public"])

# Aggregate all std platform conformance tests (CI-mandatory)
test_suite(
    name = "std",
    tests = [
        "//e2e/trait/time/std:test",
        "//e2e/trait/log/std:test",
        "//e2e/trait/sync/std:test",
        "//e2e/trait/rng/std:test",
        "//e2e/trait/socket/std:test",
        "//e2e/trait/crypto/std:test",
        "//e2e/trait/system/std:test",
        "//e2e/trait/spawner/std:test",
        "//e2e/trait/io/std:test",
        "//e2e/trait/codec/std:test",
        "//e2e/trait/rtc/std:test",
    ],
)
