# Examples
package(default_visibility = ["//visibility:public"])

# All examples that can be built in CI (excluding ESP hardware targets)
# This includes native/desktop examples and library compilation checks
filegroup(
    name = "all",
    srcs = [
        # ESP examples - only check that they compile (not flash/run)
        # These verify that the code compiles for xtensa target
        "//examples/apps/async_test:app_srcs",
        "//examples/apps/ble_e2e_test:app_srcs",
        "//examples/apps/ble_throughput:app_srcs",
        "//examples/apps/ble_x_proto_test:app_srcs",
        "//examples/apps/http_speed_test:app_srcs",
        "//examples/apps/https_speed_test:app_srcs",
        "//examples/apps/mqtt0_test:app_srcs",
        "//examples/apps/ntp_test:app_srcs",
        "//examples/apps/opus_aec_test:app_srcs",
        "//examples/apps/speaker_test:app_srcs",
        "//examples/apps/timer_test:app_srcs",
        "//examples/apps/tls_concurrent_test:app_srcs",
        "//examples/apps/tls_speed_test:app_srcs",
        "//examples/apps/wifi_dns_lookup:app_srcs",
    ],
)
