# embed-zig libraries
#
# Each library has its own BUILD.bazel with zig_package() macro.
# See individual lib/*/BUILD.bazel for specific dependencies.
#
# Usage in esp_zig_app:
#   deps = ["//lib/hal", "//lib/pkg/drivers", ...]

package(default_visibility = ["//visibility:public"])

# All source files (used by _libs in esp_zig_app for file copying)
# Must explicitly reference sub-packages since glob doesn't cross package boundaries
filegroup(
    name = "all_sources",
    srcs = glob(["*"]) + [  # Files in lib/ root + all libraries
        "//lib/pkg/audio",
        "//lib/pkg/crypto",
        "//lib/pkg/crypto/certs:root_cas",
        "//lib/pkg/dns",
        "//lib/pkg/drivers",
        "//lib/platform/esp",
        "//lib/platform/esp/idf",
        "//lib/platform/esp/impl",
        "//lib/hal",
        "//lib/pkg/http",
        "//lib/pkg/input",
        "//lib/pkg/ntp",
        "//lib/pkg/portaudio",
        "//lib/platform/raysim",
        "//lib/platform/std",
        "//lib/pkg/tls",
        "//lib/pkg/tls/test:test_sources",
        "//lib/pkg/tls/test:server_sources",
        "//lib/trait",
    ],
)
