# embed-zig libraries
#
# Each library has its own BUILD.bazel with zig_package() macro.
# See individual lib/*/BUILD.bazel for specific dependencies.
#
# Usage in esp_zig_app:
#   deps = ["//lib/hal", "//lib/pkg/drivers/audio", ...]

package(default_visibility = ["//visibility:public"])

# All source files (used by _libs in esp_zig_app for file copying)
# Must explicitly reference sub-packages since glob doesn't cross package boundaries.
#
# NOTE: zig_package targets provide .a artifacts in DefaultInfo, NOT source files.
# For ESP builds (which need source files for zig build), we reference filegroup
# targets that glob source files directly.
filegroup(
    name = "all_sources",
    srcs = glob(["*"]) + [
        "//lib/pkg/audio:srcs",
        "//lib/pkg/async/cancellation:srcs",
        "//lib/pkg/async/channel:srcs",
        "//lib/pkg/crypto:srcs",
        "//lib/pkg/crypto/certs:root_cas",
        "//lib/pkg/net/dns:srcs",
        "//lib/pkg/drivers/audio:srcs",
        "//lib/platform/esp",
        "//lib/platform/esp/idf",
        "//lib/platform/esp/impl",
        "//lib/hal:srcs",
        "//lib/pkg/net/http:srcs",
        "//lib/pkg/input:srcs",
        "//lib/pkg/math:srcs",
        "//lib/pkg/motion:srcs",
        "//lib/pkg/net/ntp:srcs",
        "//lib/pkg/portaudio:srcs",
        "//lib/platform/std:srcs",
        "//lib/pkg/net/tls:srcs",
        "//lib/pkg/net/tls/test:test_sources",
        "//lib/pkg/net/tls/test:server_sources",
        "//lib/pkg/async/waitgroup:srcs",
        "//lib/trait:srcs",
    ],
)
